feat: promote JMM, add why explanations, standardize template
JMM Promoted:
- Rewrote 00-knowledge-atoms/java-memory-model/README.md (712 lines)
- Covers: shared vs local, actions, happens-before rules, volatile, final fields, safe publication

Why Explanations Added:
- ArrayList: Why Object[] for cache locality
- HashMap: Why buckets, power-of-2, load factor 0.75
- ConcurrentHashMap: Why CAS + synchronized over lock striping
- Lambdas: Why introduced (verbose anonymous classes)
- Streams: Why declarative processing exists
- Virtual Threads: Why introduced (1MB vs 1KB stacks)
- GC: Why garbage collection exists

Standardized Template:
- templates/README.md — 12-section template for all topics
- templates/checklist.md — 42-item quality checklist